# virtualfriend

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
assets/: Unknown Game Right.aseprite  Unknown Game.aseprite  VirtualFriend.aseprite  convertToVf.js  package-lock.json  package.json
docs/: design.md
manifests/: unknowngame.vf
manifests/0285dc41d75be8419d12472f20025305/: Nester's Funky Bowling.json  Nester's Funky Bowling.vf
manifests/0742a861a599fe3361aac6ebef6745a7/: Teleroboxer.json  Teleroboxer.vf
manifests/09c5f3143c25d1d30a3470e571653e48/: Spash Squash.json  Spash Squash.vf
manifests/110a83bc070559c5cc5634a8b5cae274/: Waterworld.json  Waterworld.vf
manifests/1cec316aca8827fdf99c685a1ee49dbc/: Virtual Lab.json  Virtual Lab.vf
manifests/1cf8c69d8a740d6ef3aab54deced31c4/: SD Gundam - Dimension War.json  SD Gundam - Dimension War.vf  SD Gundam Dimension War.json  SD Gundam Dimension War.vf
manifests/1eb964d0eaa3223cfefdcc99a6265c88/: Innsmouth no Yakata.json  Innsmouth no Yakata.vf
manifests/262bbae465f851ded3bb7cf46e375224/: V-Tetris.json  V-Tetris.vf
manifests/2a1a53dcd89b1bda0d168e11da32aa7b/: Virtual WarZone.json  Virtual WarZone.vf
manifests/2ba914c8aa16f2f9230b3c5b7e17e67b/: Virtual League Baseball.json  Virtual League Baseball.vf
manifests/38ecc2c5a745a80d32eb9e8e413358c4/: Mario's Tennis.json  Mario's Tennis.vf
manifests/45aa19c4b2f10c7ef6782b0cb356e265/: Hamburgers En Route To Switzerland.json  Hamburgers En Route To Switzerland.vf
manifests/467247d5e3383d066005565bf8218436/: Panic Bomber.json  Panic Bomber.vf
manifests/4b8c8b6a7711a005dd896b3ee9b8d0f1/: Mario Kart: Virtual Cup.json  Mario Kart: Virtual Cup.vf
manifests/5b11d402f7e322c71a7d4fa6503631fa/: Virtual Bowling.json  Virtual Bowling.vf
manifests/7607f6f918615263512b17e56797c9aa/: Space Invaders Virtual Collection.json  Space Invaders Virtual Collection.vf
manifests/819b9dccf1437c3bb126670b171d7c59/: VB Racing.json  VB Racing.vf
manifests/85260599fdada2e137053a8647aa0d06/: Galactic Pinball.json  Galactic Pinball.vf
manifests/87c38f66d5b9ead72af22f515a3a5f51/: Vertical Force.json  Vertical Force.vf
manifests/907c7f10093cfcab371754efae8ed279/: GoSub.json  GoSub.vf
manifests/977c4da800dacfac1a1402781670f872/: Golf.json  Golf.vf
manifests/a1b32c3b70ad0875fada464d681867f7/: Advanced Pasta Cooking Simulator.json  Advanced Pasta Cooking Simulator.vf
src/: bus.rs  constants.rs  cpu_internals.rs  cpu_v810.rs  gamepad.rs  hardware.rs  main.rs  memory.rs  rom.rs  timer.rs  vip.rs  virtualfriend.rs
src/vip/: core.rs  mod.rs  (+3 more)
tools/manifest_generator/: Cargo.toml
tools/manifest_generator/src/: main.rs
virtualfriend/: Cargo.toml  Xargo.toml
virtualfriend/src/: buffer_writer.rs  bus.rs  cartridge.rs  constants.rs  cpu_internals.rs  cpu_v810.rs  gamepad.rs  hardware.rs  interrupt.rs  lib.rs  log.rs  rom.rs  system.rs  timer.rs  util.rs
virtualfriend/src/manifest/: mod.rs
virtualfriend/src/savestates/: mod.rs  savestate.rs
virtualfriend/src/vip/: core.rs  util.rs  vram.rs  world.rs
virtualfriend/src/vip/drawing/: mod.rs  normal_hbias.rs  obj.rs  shared.rs
virtualfriend/src/vsu/: channel.rs  channel_enum.rs  core.rs  mod.rs  sweep_modulate.rs  traits.rs  waveform.rs
virtualfriend_3ds/: Cargo.toml
virtualfriend_3ds/src/: main.rs
virtualfriend_desktop/: Cargo.toml
virtualfriend_desktop/benches/: complete.rs
virtualfriend_desktop/src/: audio_driver.rs  cpal_driver.rs  lib.rs  linear_resampler.rs  main.rs
virtualfriend_runner/: Cargo.toml
virtualfriend_swift/: Cargo.toml  Xargo.toml  build.rs  rust-toolchain.toml
virtualfriend_swift/src/: lib.rs
(+174 files in other folders)
