[package]
name = "virtualfriend"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
bitvec = "1.0.1"

image = "0.24"

softbuffer = "0.4"
# Features are for support of pixels: https://github.com/parasyte/pixels/issues/379
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
single_value_channel = "1.2.2"
pixels = "0.13.0"
