[workspace]
resolver = "2"

members = [
  "virtualfriend",
  "virtualfriend_3ds",
  "virtualfriend_desktop",
  "virtualfriend_swift"
]

[patch.crates-io]
#libc = { git = "https://github.com/agg23/libc.git", rev = "db0fbbf6b554915eaffd42fb8703ab0b11625573" }
libc = { path = "../libc" }
getrandom = { path = "../getrandom" }