[package]
name = "virtualfriend-3ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
virtualfriend = { path = "../virtualfriend" }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
