[package]
name = "virtualfriend_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
virtualfriend = { path = "../virtualfriend" }

# Features are for support of pixels: https://github.com/parasyte/pixels/issues/379
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
single_value_channel = "1.2.2"
pixels = "0.13.0"
