[package]
name = "virtualfriend_swift"
version = "0.1.0"
edition = "2021"

[lib]
name = "virtualfriend_swift"
#crate-type = ["staticlib", "cdylib"]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
virtualfriend = { path = "../virtualfriend" }
virtualfriend_runner = { path = "../virtualfriend_runner" }
swift-bridge = "0.1"