[package]
name = "manifest_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
virtualfriend = { path = "../../virtualfriend" }
virtualfriend_desktop = { path = "../../virtualfriend_desktop" }

reedline = "0.32.0"
md5 = "0.7.0"

winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"